# h64

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/h64/: h64.h
source/: h64.c  utils.h
test/: CMakeLists.txt
test/source/: h64_test.c
